--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@11ty/eleventy": "^0.11.0"
   },
   "dependencies": {
-    "clean-css": "^4.2.3"
+    "clean-css": "^4.2.3",
+    "terser": "^4.7.0"
   }
 }
