--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@11ty/eleventy": "^0.11.0"
+    "@11ty/eleventy": "^0.11.0",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1"
   },
   "dependencies": {
     "clean-css": "^4.2.3",
     "luxon": "^1.24.1",
+    "markdown-it": "^11.0.0",
     "terser": "^4.7.0"
   }
 }
