--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clean-css": "^4.2.3",
     "luxon": "^1.24.1",
     "markdown-it": "^11.0.0",
+    "markdown-it-footnote": "^3.0.3",
     "terser": "^4.7.0"
   }
 }
